
[ HB. zabbix_suckerd core dumps occasionally ]
[ HB. SNMP code core dumps occasionally ]

[ DOCS. SNMP with missing MIB files can be used by:
snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]
[ DOCS. Add release procedure to the Manual (as unvisible comment) ] 

[ CORE. All errors and warnings must be numbered and documented ]

Changes for 1.0beta4:

 - support for check_service[service,port]
 - advanced change of host status in zabbix_suckerd (Alexei)
 - added support of UserParameter(s) returning non-numeric values (Alexei) 
 - doc/manual.lyx will not be included in Zabbix release (Alexei)
 - chnages to make Zabbix compile in non-GCC environments (Alexei)
 - unreachable hosts will be clickable in system maps (Alexei)
 - fixed double posting of the same trigger status into alarms (Alexei) 
 - fixed macros substitution in email alerts (Alexei)
 - removed option -Wall from all Makefiles (Alexei)
 - removed "//" comments from Zabbix code (Alexei)
 - disabled experimental code by commenting #define PERF (Alexei)
 - improvements in SNMP handling for zabbix_suckerd (Alexei)
 - fixed check for SNMP library in configure.in (Alexei)
 - template host set to empty in Host definition form (Alexei)
 - support for DisableHousekeeping for zabbix_suckerd (Alexei)
 - protection from items.delay set to 0 (Alexei)
 - values provided by an agent can be less than zero (Alexei)

Changes for 1.0beta3:

 - support for chart showing diff instead of real values (Alexei)
 - support for new trigger status - UNKNOWN (Alexei)
 - zabbix_suckerd housekeeping process to disconnect from 
 DB when unactive (Alexei)
 - support for check_service[http] (Alexei)
 - drop column config.password_required (Alexei)
 - drop column users.groupid (Alexei)
 - drop table groups (Alexei)
 - added parameter DBConnectOnEach for zabbix_trapperd (Alexei)
 - added default user "guest" (Alexei)
 - more support for flexible permissions (Alexei)