@@ -587,10 +587,10 @@ int	latest_alarm(int triggerid, int status)
 	int ret = FAIL;
 
 
-	zabbix_log(LOG_LEVEL_WARNING,"In latest_alarm()");
+	zabbix_log(LOG_LEVEL_DEBUG,"In latest_alarm()");
 
 	sprintf(sql,"select max(clock) from alarms where triggerid=%d",triggerid);
-		zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+		zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 	result = DBselect(sql);
 
 	if((result==NULL)||(DBnum_rows(result)==0)||(DBget_field(result,0,0) == NULL))
@@ -600,13 +600,13 @@ int	latest_alarm(int triggerid, int status)
         }
 	else
 	{
-	zabbix_log(LOG_LEVEL_WARNING,"In latest_alarm(0)");
+	zabbix_log(LOG_LEVEL_DEBUG,"In latest_alarm(0)");
 		clock=atoi(DBget_field(result,0,0));
-	zabbix_log(LOG_LEVEL_WARNING,"In latest_alarm(1)");
+	zabbix_log(LOG_LEVEL_DEBUG,"In latest_alarm(1)");
 		DBfree_result(result);
 
 		sprintf(sql,"select istrue from alarms where triggerid=%d and clock=%d",triggerid,clock);
-		zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+		zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 		result = DBselect(sql);
 		if(DBnum_rows(result)==1)
 		{
@@ -627,7 +627,7 @@ int	add_alarm(int triggerid, int status)
 	int	now;
 	char	sql[MAX_STRING_LEN+1];
 
-	zabbix_log(LOG_LEVEL_WARNING,"In add_alarm()");
+	zabbix_log(LOG_LEVEL_DEBUG,"In add_alarm()");
 
 	if(latest_alarm(triggerid,status) == SUCCEED)
 	{
@@ -636,10 +636,10 @@ int	add_alarm(int triggerid, int status)
 
 	now=time(NULL);
 	sprintf(sql,"insert into alarms(triggerid,clock,istrue) values(%d,%d,%d)",triggerid,now,status);
-	zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+	zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 	DBexecute(sql);
 
-	zabbix_log(LOG_LEVEL_WARNING,"End of add_alarm()");
+	zabbix_log(LOG_LEVEL_DEBUG,"End of add_alarm()");
 	
 	return SUCCEED;
 }
@@ -648,14 +648,14 @@ int	update_trigger_status(int triggerid,int status)
 {
 	char	sql[MAX_STRING_LEN+1];
 
-	zabbix_log(LOG_LEVEL_WARNING,"In update_trigger_status()");
+	zabbix_log(LOG_LEVEL_DEBUG,"In update_trigger_status()");
 	add_alarm(triggerid,status);
 
 	sprintf(sql,"update triggers set istrue=%d where triggerid=%d",status,triggerid);
-	zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+	zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 	DBexecute(sql);
 
-	zabbix_log(LOG_LEVEL_WARNING,"End of update_trigger_status()");
+	zabbix_log(LOG_LEVEL_DEBUG,"End of update_trigger_status()");
 	return SUCCEED;
 }
 
@@ -667,10 +667,10 @@ int update_triggers_status_to_unknown(int hostid)
 
 	DB_RESULT	*result;
 
-	zabbix_log(LOG_LEVEL_WARNING,"In update_triggers_status_to_unknown()");
+	zabbix_log(LOG_LEVEL_DEBUG,"In update_triggers_status_to_unknown()");
 
 	sprintf(sql,"select distinct t.triggerid from hosts h,items i,triggers t,functions f where f.triggerid=t.triggerid and f.itemid=i.itemid and h.hostid=i.hostid and h.hostid=%d",hostid);
-	zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+	zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 	result = DBselect(sql);
 
 	rows=DBnum_rows(result);
@@ -689,7 +689,7 @@ int update_triggers_status_to_unknown(int hostid)
 	}
 
 	DBfree_result(result);
-	zabbix_log(LOG_LEVEL_WARNING,"End of update_triggers_status_to_unknown()");
+	zabbix_log(LOG_LEVEL_DEBUG,"End of update_triggers_status_to_unknown()");
 
 	return SUCCEED; 
 }
@@ -700,10 +700,10 @@ int update_host_status(int hostid,int status)
 	char	sql[MAX_STRING_LEN+1];
 	int	now;
 
-	zabbix_log(LOG_LEVEL_WARNING,"In update_host_status()");
+	zabbix_log(LOG_LEVEL_DEBUG,"In update_host_status()");
 
 	sprintf(sql,"select status,disable_until from hosts where hostid=%d",hostid);
-	zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+	zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 	result = DBselect(sql);
 
 	if( (result==NULL) || (DBnum_rows(result)==0) )
@@ -734,19 +734,19 @@ int update_host_status(int hostid,int status)
 	if(status==HOST_STATUS_MONITORED)
 	{
 		sprintf(sql,"update hosts set status=%d where hostid=%d",HOST_STATUS_MONITORED,hostid);
-		zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+		zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 		DBexecute(sql);
 	}
 	else if(status==HOST_STATUS_NOT_MONITORED)
 	{
 		sprintf(sql,"update hosts set status=%d where hostid=%d",HOST_STATUS_NOT_MONITORED,hostid);
-		zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+		zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 		DBexecute(sql);
 	}
 	else if(status==HOST_STATUS_UNREACHABLE)
 	{
 		sprintf(sql,"update hosts set status=%d,disable_until=%d where hostid=%d",HOST_STATUS_UNREACHABLE,now+DELAY_ON_NETWORK_FAILURE,hostid);
-		zabbix_log(LOG_LEVEL_WARNING,"SQL [%s]",sql);
+		zabbix_log(LOG_LEVEL_DEBUG,"SQL [%s]",sql);
 		DBexecute(sql);
 	}
 	else
@@ -756,7 +756,7 @@ int update_host_status(int hostid,int status)
 	}
 
 	update_triggers_status_to_unknown(hostid);
-	zabbix_log(LOG_LEVEL_WARNING,"End of update_host_status()");
+	zabbix_log(LOG_LEVEL_DEBUG,"End of update_host_status()");
 
 	return SUCCEED;
 }
