@@ -36,6 +36,7 @@ snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]
 
 Changes for 1.0beta4:
 
+ - unreachable parameters will not be shown in Queue (Alexei)
  - support for check_service[service,port]
  - advanced change of host status in zabbix_suckerd (Alexei)
  - added support of UserParameter(s) returning non-numeric values (Alexei) 
